--- a/BGC.Api.Web/Properties/launchSettings.json
+++ b/BGC.Api.Web/Properties/launchSettings.json
@@ -4,9 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5138",
-      "launchUrl": "http://localhost:5138/scalar/v1",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5076",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -15,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7162;http://localhost:5138",
+      "applicationUrl": "https://localhost:7144;http://localhost:5076",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
