--- a/BGC.Api.Web/BGC.Api.Web.csproj
+++ b/BGC.Api.Web/BGC.Api.Web.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.4.3" />
   </ItemGroup>
 
 </Project>
