--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ artifacts/
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
+# Visual Studio 2015 cache/options directory
+.vs/
+
 # NuGet Packages
 *.nupkg
 # NuGet Symbol Packages
@@ -52,3 +55,13 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+# JetBrains Rider
+.idea/
+*.sln.iml
