--- a/BGC.Api.Web/appsettings.json
+++ b/BGC.Api.Web/appsettings.json
@@ -7,6 +7,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
+  },  
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "https://192.168.0.217:44311/"
+      }
+    }
+  },  
   "AllowedHosts": "*"
 }
