--- a/BGC.Api.Web/Properties/launchSettings.json
+++ b/BGC.Api.Web/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7144;http://localhost:5076"
+      "applicationUrl": "https://192.168.0.217:44311/"
     },
     "IIS Express": {
       "commandName": "IISExpress",
