--- a/BGC.Api.Web/BGC.Api.Web.csproj
+++ b/BGC.Api.Web/BGC.Api.Web.csproj
@@ -13,7 +13,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Scalar.AspNetCore" Version="2.4.3" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.4.8" />
+    <PackageReference Include="Scalar.AspNetCore.Microsoft" Version="2.4.8" />
   </ItemGroup>
 
 </Project>
