--- a/BGC.Api.Web/BGC.Api.Web.csproj
+++ b/BGC.Api.Web/BGC.Api.Web.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Scalar.AspNetCore" Version="2.4.8" />
     <PackageReference Include="Scalar.AspNetCore.Microsoft" Version="2.4.8" />
+    <PackageReference Include="TinyMapper" Version="3.0.3" />
   </ItemGroup>
 
 </Project>
